# hcs-url

./: .gitlab-ci.yml  CMakeLists.txt  Changes.md  Doxyfile  README.md  conanfile.txt  sonar-project.properties
include/headcode/url/: ipaddress.hpp  logger.hpp  url.hpp  url_core.hpp  url_core_bits.hpp  version.hpp
include/headcode/url/impl/: url_core_impl.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  test_parse.cpp
test/unit/: CMakeLists.txt  test_url.cpp  test_version.cpp
tools/: CMakeLists.txt
tools/conan/: CMakeLists.txt  conanfile.py
tools/docker/: CMakeLists.txt  Dockerfile.build.debian-buster  Dockerfile.build.fedora32  Dockerfile.build.ubuntu-focal  README.md  create-containers.sh
tools/package/deb/: conffiles  postinst  postrm  preinst  prerm
